--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "appwrite": "^15.0.0",
+    "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
