--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/main.js",
+  "type": "module",
   "scripts": {
-    "start": "node server.js",
     "format": "prettier --write ."
   },
   "dependencies": {
-    "express": "^4.19.2",
     "node-appwrite": "^12.0.1"
   },
   "devDependencies": {
